Small fix on overflowing Records table

--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@
     border-bottom: 1px solid darkgray;
 }
 
-/*==MEDIA QUERIE======================*/
+/*==MEDIA QUERIES======================*/
 
 @media screen and (max-width: 1200px) {
     .App {
@@ -126,7 +126,7 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .App {
         width: 80vw;
     }
