--- a/src/components/Menu/Records.css
+++ b/src/components/Menu/Records.css
@@ -1,3 +1,7 @@
+.Records {
+    width: auto;
+}
+
 .records-tip {
     text-align: center;
     font-style: italic;
